--- a/config.json
+++ b/config.json
@@ -5,7 +5,9 @@
   "outWidth": 1280,
   "outHeight": 720,
   "outFrame": 12,
-  "colorSize": 16,
+  "colorSize": 25,
+  "gvSeconds": 5,
+  "zipSeconds": 20,
   "mp3Bit":"64k",
   "ffmpegPath": "/exe/ffmpeg.exe",
   "videoPath": "/video/yjm.mp4",
