--- a/config.json
+++ b/config.json
@@ -1,9 +1,9 @@
 {
-  "gifWidth": 1920,
-  "gifHeight": 1080,
-  "gifFrame": 12,
-  "outWidth": 1920,
-  "outHeight": 1080,
+  "sourceWidth": 1920,
+  "sourceHeight": 1080,
+  "sourceFrame": 12,
+  "outWidth": 1260,
+  "outHeight": 720,
   "outFrame": 12,
   "colorSize": 25,
   "gvSeconds": 5,
