--- a/config.json
+++ b/config.json
@@ -1,15 +1,16 @@
 {
   "sourceWidth": 1920,
   "sourceHeight": 1080,
-  "sourceFrame": 24,
+  "sourceFrame": 12,
   "outWidth": 1920,
   "outHeight": 1080,
-  "outFrame": 24,
+  "outFrame": 12,
   "colorSize": 16,
   "gvSeconds": 5,
   "zipSeconds": 20,
-  "bPageNum": 2,
-  "bPointNum": 1,
+  "maxBRowNum": 2,
+  "maxBColumnNum": 1,
+  "maxBPageNum": 2,
   "thread": 4,
   "mp3Bit":"48k",
   "ffmpegPath": "/exe/ffmpeg.exe",
